added acept encoding to all methods
